# marin3r-tests

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: acceptance.yml  build_image.yml
config/: settings.local.yaml.tpl  settings.yaml
testsuite/: utils.py
testsuite/certificates/: __init__.py
testsuite/config/: __init__.py  openshift_loader.py
testsuite/httpx/: __init__.py
testsuite/openshift/: __init__.py  client.py  config.py  envoy.py  httpbin.py  route.py
testsuite/resources/: httpbin.yaml
testsuite/tests/: conftest.py  test_reject.py  test_rollback.py  test_routes.py  test_simple.py  test_update_config.py
testsuite/tests/tls/: conftest.py  test_tls.py
